feat: Add Klaviyo provider and Shopify webhook integration
- Add Klaviyo as email provider with full API integration:
  - Profile management (create, update, get by email)
  - List management (create, get, add/remove profiles)
  - Event tracking for flow triggers
  - Campaign management (create, schedule, send)
  - Flow management (get, update status)
  - Template management
  - Suppression/unsuppression support

- Create sample automation flows:
  - Welcome series (3 emails over 7 days with engagement branching)
  - Abandoned cart recovery (multi-step with value-based incentives)
  - Re-engagement campaign (30+ day inactive with VIP paths)

- Add Shopify webhook receiver:
  - customer/created → sync to CDP
  - customer/updated → update profile data
  - orders/created → track purchase event
  - checkouts/abandoned → trigger abandoned cart flow
  - HMAC signature verification

- Add Klaviyo provider integration tests
- Update README with Klaviyo and Shopify setup instructions
- Update .env.example with Klaviyo configuration

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ SENDGRID_API_KEY=
 # MixMax (optional)
 MIXMAX_API_KEY=
 
+# Klaviyo (optional)
+KLAVIYO_API_KEY=
+KLAVIYO_API_REVISION=2024-02-15
+
 # Worker Configuration
 WORKER_CONCURRENCY=5
 WORKER_MAX_RETRIES=3
