--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "postinstall": "npm run db:generate",
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
